syntax = "proto3";

package v1;
option go_package = "github.com/bhojpur/piro/pkg/api/v1";
import "piro.proto";

message ListJobSpecsRequest{}

message ListJobSpecsResponse {
    Repository repo = 1;
    string name = 2;
    string path = 3;
    string description = 4;
    repeated DesiredAnnotation arguments = 5;
}

// DesiredAnnotation describes an annotation a Kubernetes Job should have
message DesiredAnnotation {
    string name = 1;
    bool required = 2;
    string description = 3;
}

message IsReadOnlyRequest {}

message IsReadOnlyResponse {
    bool readonly = 1;
}

// PiroUI offers services intended for the Bhojpur Piro web user interface
service PiroUI {
    // ListJobSpecs returns a list of Job(s) that can be started through the Piro UI.
    rpc ListJobSpecs(ListJobSpecsRequest) returns (stream ListJobSpecsResponse) {};

    // IsReadOnly returns true if the Piro UI is readonly.
    rpc IsReadOnly(IsReadOnlyRequest) returns (IsReadOnlyResponse) {};
}